tests/errors/err_selective_import_excludes.mix
// ERROR: undefined function 'deg_to_rad'
use std.math: PI

main()
    print(PI())
    print(deg_to_rad(180.0))
